syntax = "proto3";

// 1. Define package
package randomPackage;

// 2. Define your service
service Random {

  // 3. Make a rpc method
  rpc PingPong (PingRequest) returns (PongResponse) {};
  rpc RandomNumbers (NumberRequest) returns (stream NumberResponse) {};
  rpc TodoList (stream TodoRequest) returns (TodoResponse);
}

// 4. Define protobuf message depending rpc methods
message PingRequest {
  string message = 1;
}

message PongResponse {
  string message = 1;
}

message NumberRequest {
  int32 maxValue = 1;
}

message NumberResponse {
  int32 num = 1;
}

message TodoRequest {
  string todo = 1;
  string status = 2;
}

message TodoResponse {
  repeated TodoRequest todos = 1;
}